Fixed logo positioning on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -217,7 +217,7 @@ body {
 
 .boba {
   display: block;
-  position: relative;
+  position: absolute;
   left: 50%;
   margin-bottom: 2rem;
   width: 2px;
@@ -382,6 +382,10 @@ nav .boba {
   margin-bottom: 0;
 }
 
-@media (min-width: 1200px){
-  nav .boba { position: absolute; }
+@media (max-width: 1200px){
+  nav .boba { 
+    position: absolute;
+    margin-top: 2rem;
+    margin: 0vw !important;
+  }
 }
